# openstack-ansible-repo_server

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  bindep.txt  manual-test.rc  readme.rst  run_tests.sh  setup.cfg  tox.ini
defaults/: main.yml
doc/source/: conf.py  index.rst
examples/: playbook.yml
handlers/: main.yml
meta/: main.yml
releasenotes/notes/: pypiserver-pypi-cache-216e9e087f6d3f24.yaml
releasenotes/source/: conf.py
tasks/: install_apt.yml  install_yum.yml  main.yml  repo_cacher.yml  repo_install.yml  repo_install_constraints.yml  repo_install_lsyncd.yml  repo_key_distribute.yml  repo_key_populate.yml  repo_post_install.yml  repo_pre_install.yml  repo_sync_cleanup.yml  repo_sync_manager.yml
templates/: acng.conf.j2  apache_mpm.conf.j2  git-daemon-upstart-init.j2  git.service.j2  lsyncd.defaults.j2  lsyncd.lua.j2  nginx-pypi.conf.j2  nginx.conf.j2  openstack-slushee.vhost.j2  openstack_slushee.vhost.j2  pypiserver-systemd-init.j2  repo_prepost_cmd.sh.j2  repo_prepost_cmd_upstart.sh.j2  rsyncd.conf.j2
tests/: ansible-role-requirements.yml  inventory  test-install-repo-server.yml  test-prepare-containers.yml  test-prepare-host.yml  test-repo-server-functional.yml  test.yml
tests/host_vars/: container1.yml  container2.yml  container3.yml  localhost.yml
vars/: debian.yml  main.yml  redhat-7.yml  redhat-8.yml  redhat.yml  suse.yml
zuul.d/: project.yaml
